Fix professor name spacing issue

--- a/imports/ui/css/Review.css
+++ b/imports/ui/css/Review.css
@@ -60,6 +60,7 @@
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 5px;
+  margin-bottom: 6px;
 }
 
 #label{
